# itkffi

./: CMakeLists.txt  README.md  install_dependencies.sh  itkffi-scm-1.rockspec
julia/: CMakeLists.txt  ITKFFI.jl  filter.jl  image.jl
src/: CMakeLists.txt  CMakeMacros.cmake  ConnectedComponentFilters.cxx  GaussianFilters.cxx  GaussianSmoothing.cxx  Image.cxx
src/torch/: itkffi-scm-1.rockspec  itkfilter.lua
test/: test.lua  test.py
torch/: CMakeLists.txt  filter.lua  image.lua  init.lua  init.lua.in  itkffi-scm-1.rockspec  itkffi.lua
